@@ -1,3 +1,8 @@
+Mon Jan 25 23:24:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* test/ruby/test_string.rb (test_split): add tests.
+	  patched by Hugh Sasse [ruby-core:27794]
+
 Fri Jan 22 01:22:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* eval.c (thread_timer, rb_thread_stop_timer): check the timing of
